--- a/app/sass/lib/_mixins.sass
+++ b/app/sass/lib/_mixins.sass
@@ -228,10 +228,11 @@
     width: 100vw
     display: flex
     flex-flow: wrap row
+    gap: 1.5rem
     justify-content: space-between
     align-items: center
     transition: 0.5s
-    padding: 1.5rem 2.5rem 1.5rem 2.25rem
+    padding: 1.5rem 2.25rem 1.5rem 2.25rem
     .imagotype 
         width: 100%
         display: flex
@@ -271,13 +272,13 @@
         justify-content: space-between
         flex-wrap: nowrap
         align-items: center
-        padding: 1.6rem 0rem 0 0rem
+        // padding: 1.6rem 0rem 0 0rem
         ul 
             display: flex
             flex-flow: row nowrap
             justify-content: space-between
             font-size: 1.2rem
-            gap: 1.2rem
+            gap: 2rem
 
 @mixin nav_bar_one_line
     .imagotype
