--- a/app/sass/partials/_courses.sass
+++ b/app/sass/partials/_courses.sass
@@ -106,6 +106,7 @@ $windowWidth: 100vw
 
 @media (min-width: 1400px) 
     .course
+        height: 300px
         .course_text_block
             max-width: 100rem
             
