--- a/app/sass/partials/_publications.sass
+++ b/app/sass/partials/_publications.sass
@@ -49,7 +49,7 @@
         text-align: left
         display: flex
         flex-wrap: wrap
-        padding-bottom: $spacing_sm
+        padding-bottom: $spacing_lg
         border-bottom: solid 1px $ca-blue-200
         justify-content: left
         .filter
@@ -169,7 +169,7 @@
             display: flex
             flex-wrap: wrap
             gap: 4px
-            padding-bottom: $spacing_sm
+            padding-bottom: $spacing_lg
             border-bottom: solid 1px $ca-blue-100
             justify-content: space-between
             .filter
@@ -192,9 +192,9 @@
         gap: $spacing_xsm
         display: flex
         flex-direction: column
-        padding: $spacing_xsm 0 $spacing_sm 0
+        padding: $spacing_sm 0 $spacing_md 0
         .paper 
-            padding: 6px 0 $spacing_sm 0
+            padding: $spacing_sm 0 $spacing_md 0
        
 
 
