--- a/app/sass/partials/_home.sass
+++ b/app/sass/partials/_home.sass
@@ -20,10 +20,10 @@
             object-position: 50% 0
     .award_section 
         display: flex
+        margin: $spacing_xl auto
         background: #fff9e6
-        gap: 0.2rem
-        border-radius:24px
-        padding: 0.8rem
+        gap: $spacing_md
+        border-radius: 24px
         border: 2px $ca-or-100 solid
         @apply text-orange-500
         width:100%
@@ -65,20 +65,17 @@
             padding: 0.75rem
             margin-bottom: 0.8rem
             background: #ffe489
-            border-radius:80px
+            border-radius: 80px
             @apply text-orange-400
             @include drop-shadow-lighter
       
-
-        
 
 
 @media (min-width: 600px)
     .award_section
         width:85%
-        padding: 1rem 2rem 1rem 2rem
+        padding: 1.5rem 2rem 1rem 2rem
         flex-direction: column
-       
         .award_icon
             min-width: 4rem
             height: 4rem
@@ -95,7 +92,7 @@
         flex-direction: row
         width:70%
         text-align: left
-        gap: 1.2rem
+        // gap: 1.2rem
         align-self: flex-start
         .award_title
             display: flex
