--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -411,6 +411,8 @@ button {
   }
 
   main {
+    max-width: 1440px;
+    margin: 2.5rem auto;
     .our_projects {
       .project {
         display: flex;
