--- a/app/sass/partials/_recentPublications.sass
+++ b/app/sass/partials/_recentPublications.sass
@@ -3,7 +3,6 @@
 
 ._publications._recent_publications
     // display: grid
-    // display: grid
     // grid-template-rows: repeat(3, 1fr)
     // grid-template-columns: repeat(2, 1fr)
 
@@ -48,26 +47,21 @@
         border: 4px solid $ca-blue-400
 
     .article_content
+        @apply min-h-[350px]
+        @apply flex flex-col justify-between
         gap: $spacing_xsm
-        display: flex
-        flex-direction: column
-        padding-left: $spacing_sm
-        padding-bottom: $spacing_sm
-        padding-right: $spacing_md
-        padding-top: $spacing_sm
+        padding: $spacing_md $spacing_sm
         .article_date
             span
                 display: flex
                 small
                     display: flex
                     @include border-tag
-            
-
+        
         .article_title
             font-weight: $bold
             @apply text-gray-800
-            margin-top: 0.6rem
-            margin-bottom: 0
+            margin: 0.6rem 0 0 0
 
         .article_author
             font-weight: $regular
