courses height fix

--- a/app/sass/partials/_courses.sass
+++ b/app/sass/partials/_courses.sass
@@ -45,10 +45,10 @@ $windowWidth: 100vw
 
 @media (min-width: 770px)
     .course
+        min-height: 300px
         display: flex
         color: white
         font-weight: 400
-        height: 250px
         overflow: hidden    
         .card_container_top
             height: 32px
@@ -106,7 +106,6 @@ $windowWidth: 100vw
 
 @media (min-width: 1400px) 
     .course
-        height: 300px
         .course_text_block
             max-width: 100rem
             
