resuelto problema inicial de idioma, tipografías reducidas de tamaño

--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -53,7 +53,7 @@ TYPOGRAPHY
 /* ==========================================================================
     ESTRUCTURA SEGÚN IDIOMA
    ========================================================================== */
-.page_es {
+.page_es, .page_es-ES {
   header {
     @include nav_bar_es;
   }
