--- a/app/sass/partials/_home.sass
+++ b/app/sass/partials/_home.sass
@@ -8,8 +8,8 @@
             margin-bottom: 2rem
    
         p
-            margin-bottom: 2rem
-            width:80%
+            margin-bottom: 1rem
+            @apply max-w-[75ch]
             @apply text-gray-800
     .group_description 
         //width: 100vw
