--- a/app/sass/partials/_recentPublications.sass
+++ b/app/sass/partials/_recentPublications.sass
@@ -1,19 +1,10 @@
 @import '../lib/_variables.sass'
 @import "../lib/_mixins.sass"
 
-._publications._recent_publications
-    // display: grid
-    // grid-template-rows: repeat(3, 1fr)
-    // grid-template-columns: repeat(2, 1fr)
-
-    gap: $spacing_xsm
-    height: 100%
-
 ._recent_publications
     a 
         height: 100%
-    .article
-        height:100%
+
 .more
     // grid-column: 3 / span 2
     // grid-row: 6 / span 1
@@ -23,19 +14,14 @@
     justify-content: right
 
 
-/* If you need specific responsive adjustments */
-@media (min-width: 900px)
-
-
 .article
     transition: 200ms ease-in-out
-    display: flex
-    flex-direction: column
-    @apply bg-gray-50
+    height: 260px
+    // @apply flex flex-col min-h-[260px]
+    @apply bg-primary-50
     &:hover
         transition: 200ms ease-in-out
-
-        @apply bg-gray-100
+        @apply bg-primary-300
 
     .article_stroke.color-orange
         border: 4px solid $ca-or-300
@@ -44,43 +30,31 @@
         border: 4px solid $ca-or-100
 
     .article_stroke.color-purple
-        border: 4px solid $ca-blue-400
+        @apply border-t-[7px] border-solid border-primary
 
     .article_content
-        @apply min-h-[350px]
-        @apply flex flex-col justify-between
-        gap: $spacing_xsm
-        padding: $spacing_md $spacing_sm
+        @apply px-4 py-8 h-full
+        @apply flex flex-col justify-between gap-4
+        @apply text-gray-800
         .article_date
-            span
-                display: flex
-                small
-                    display: flex
-                    @include border-tag
-        
-        .article_title
-            font-weight: $bold
-            @apply text-gray-800
-            margin: 0.6rem 0 0 0
+            @apply flex
+            small
+                @include border-tag
 
-        .article_author
-            font-weight: $regular
-            @apply text-gray-800
-            margin-bottom: 1em
+        .article_info
+            .title
+                font-weight: $bold
+            .author
+                font-weight: $regular
 
 // este código está duplicado en publications.
 //habría que ver si se puede convertir en otro mixin
 .paper_link      
     @include icon-button-left 
     @include button    
-    display: flex
-    flex-direction: row
-    //gap: $spacing_xsm
-    align-content: center
-    justify-content: left
-    margin-top: 0.6rem        
+    @apply flex justify-end items-center text-center
+    margin-top: .5rem        
     a 
         @include big-border-button-blue
         display: flex
         align-content: center
-        //margin-top: $spacing_sm     
