--- a/app/sass/partials/_projects.sass
+++ b/app/sass/partials/_projects.sass
@@ -3,7 +3,7 @@
 // @import ('./lib/_type.sass')
 
 $windowHeight: 100vh
-$windowWidth: 100vw 
+$windowWidth: 100% 
 
 @media (min-width: 150px) 
     .filter_options
