--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -85,7 +85,7 @@ TYPOGRAPHY
 body,
 html {
   color: black;
-  @apply text-primary;
+  @apply text-primary w-full overflow-x-hidden;
   font-size: 12px;
   font-family: $montserrat;
   // margin: 0 auto;
@@ -248,54 +248,19 @@ button {
     .grid_container {
       width: 100%;
       display: grid;
-      grid-template-columns: repeat(3, 6% 18% 5%);
+      grid-template-columns: repeat(3, 1fr);
       grid-template-rows: auto auto;
       gap: 10px;
       .grid_item {
+        width: 100%;
+        height: 100%;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
         color: white;
         padding: 2rem 2.6rem;
         border-radius: 8px;
-        max-height: fit-content;
-        background-size: cover;
-        background-position: center;
-      }
-      .top_left {
-        background: linear-gradient(139deg, rgba(83, 64, 255, 0.9) 0%, rgba(111, 199, 255, 0.9) 100%);
-        grid-column: 1 / 3;
-        grid-row: 1 / 2;
-      }
-  
-      .top_mid {
-        background: linear-gradient(25deg, rgba(83, 64, 255, 0.9) 44%, rgba(111, 199, 255, 0.9) 100%);
-        grid-column: 3 / 7;
-        grid-row: 1 / 2;
-      }
-  
-      .top_right {
-        background: linear-gradient(320deg, rgba(83, 64, 255, 0.9) 0%, rgba(196, 141, 116, 0.9) 100%);
-        grid-column: 7 / 10;
-        grid-row: 1 / 2;
-      }
-  
-      .bottom_left {
-        background: linear-gradient(to top, rgba(83, 64, 255, 0.9) 0%, rgba(83, 64, 255, 0.9) 30%, rgba(196, 141, 116, 0.9) 100%);
-        grid-column: 1 / 4;
-        grid-row: 2 / 3;
-      }
-  
-      .bottom_mid {
-        background: linear-gradient(225deg, rgba(255, 127, 0, 0.87) 0%, rgba(192, 112, 168, 0.89) 100%);
-        grid-column: 4 / 7;
-        grid-row: 2 / 3;
-      }
-  
-      .bottom_right {
-        background: linear-gradient(180deg, rgba(255, 127, 0, 0.87) 0%, rgba(133, 90, 186, 0.93) 70%);
-        grid-column: 7 / 10;
-        grid-row: 2 / 3;
+        background: linear-gradient(30deg, rgba(83, 64, 255, 0.9) 0%, rgba(111, 199, 255, 0.9) 100%);
       }
     }
 
