--- a/app/sass/partials/_home.sass
+++ b/app/sass/partials/_home.sass
@@ -12,7 +12,6 @@
             @apply max-w-[75ch]
             @apply text-gray-800
     .group_description 
-        //width: 100vw
         img
             width:100%
             height:26.2vw
@@ -81,7 +80,7 @@
             height: 4rem
             padding:  1.5rem
     .group_description 
-        width: 100vw
+        width: 100%
         img
             width: auto
             height: 25rem
