title links y otros ajustes

--- a/app/sass/partials/_courses.sass
+++ b/app/sass/partials/_courses.sass
@@ -1,8 +1,8 @@
 @import "../lib/_mixins.sass"
     
 $bg-img: "/assets/img/courses/fondo-cursos.png"
-$windowHeight: 100vh
-$windowWidth: 100vw
+$windowHeight: 100dvh
+$windowWidth: 100%
 
 @media (min-width: 150px)
     .course
