--- a/app/sass/lib/_mixins.sass
+++ b/app/sass/lib/_mixins.sass
@@ -97,13 +97,13 @@
     p 
         margin-bottom: 0
 @mixin big-border-button-blue
-    border: 1px solid $ca-blue-700
+    border: 2px solid $ca-blue-700
     color: $ca-blue-700
     border-radius: 24px
     padding: 0.5rem 1.2rem 0.7rem 1.4rem
     transition: 200ms ease-in-out
+    font-weight: 600
     p 
-        font-weight: 500
     &:hover
         color: white
         transition: 200ms ease-in-out
@@ -163,7 +163,7 @@
 // BARRA DE NAVEGACIÓN DE TELEFONO
 @mixin nav_bar_phone
     @include drop-shadow-intermediate
-    width: 100vw
+    width: 100%
     display: flex
     flex-flow: wrap row
     justify-content: space-between
@@ -225,7 +225,7 @@
 // que ocupe la lista de items (ul)
 @mixin nav_bar_two_lines
     @include drop-shadow-intermediate
-    width: 100vw
+    width: 100%
     display: flex
     flex-flow: wrap row
     gap: 1.5rem
