--- a/app/sass/partials/_courses.sass
+++ b/app/sass/partials/_courses.sass
@@ -60,6 +60,7 @@ $windowWidth: 100%
                 display: flex
                 align-items: center
                 padding: auto
+                cursor: pointer
                 div
                     margin-top: 0.14rem
         .course_text_block
